# helloagent-hermes-plugin

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/helloagent_hermes/: __init__.py  adapter.py  install.py  plugin.yaml
tests/: conftest.py  test_adapter.py  test_install.py
