[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helloagent-hermes-plugin"
version = "0.1.1"
description = "HelloAgent platform plugin for Hermes Agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "HelloAgent"}]
keywords = ["helloagent", "hermes-agent", "agent", "messaging", "plugin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "helloagentai>=0.1.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "pyyaml>=6",
    "ruff>=0.8",
]

[project.scripts]
helloagent-hermes = "helloagent_hermes.install:main"

[project.entry-points."hermes_agent.plugins"]
helloagent = "helloagent_hermes"

[project.urls]
Homepage = "https://github.com/helloagentai/helloagent-hermes-plugin"
Repository = "https://github.com/helloagentai/helloagent-hermes-plugin.git"
Issues = "https://github.com/helloagentai/helloagent-hermes-plugin/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["helloagent_hermes*"]

[tool.setuptools.package-data]
helloagent_hermes = ["plugin.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.coverage.run]
source = ["helloagent_hermes"]
